--- a/client/src/components/Home/Nav/SearchBar.css
+++ b/client/src/components/Home/Nav/SearchBar.css
@@ -1,3 +1,4 @@
+
 .search input {
     border-radius: 50px;
     border: rgb(193, 250, 108);
@@ -7,6 +8,8 @@
     opacity: 0.7;
     padding-left: 50px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", "Verdana", "sans-serif";
+    margin-left: 5px;
+    margin-bottom: 5px;
 
     
 }
@@ -16,6 +19,7 @@
     opacity: 0.7;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", "Verdana", "sans-serif";
     font-size: 14px;
+    
 
 }
 
@@ -23,7 +27,8 @@
     border-radius: 50px;
     border: transparent;
     height: 20px;
-    margin: 5px;
+    margin: 5px 5px 5px 10px;
     background: rgb(167,201,87);
     font-size: larger;
+    cursor: pointer;
 }
