--- a/client/src/components/Home/Pagination.css
+++ b/client/src/components/Home/Pagination.css
@@ -1,6 +1,6 @@
-.pag button {
+.pag  {
     border-radius: 5px;
-    background-color: #aad576;
+    background: #aad576;
     border: transparent;
     margin:5px;
     margin-top: 20px;
@@ -11,7 +11,23 @@
     cursor: pointer;
 }
 
-.pag button:hover {
+.pageactual{
+    border-radius: 5px;
     background: #e8aa14;
     color: white;
+    border: transparent;
+    margin:5px;
+    margin-top: 20px;
+    margin-bottom: 17px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", "Verdana", "sans-serif";
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
 }
+/* 
+.select button{
+    background: #e8aa14;
+    color: white;
+} */
+
+
