--- a/client/src/components/Home/Nav/Nav.css
+++ b/client/src/components/Home/Nav/Nav.css
@@ -59,6 +59,7 @@ select.option:checked{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', "Geneva", "Verdana", "sans-serif";
     font-size: 16px;
     font-weight: bold;
+    color: green;
 }
 .but:hover {
     background: #e8aa14;
