--- a/client/src/components/CreateRecipe/CreateRecipe.css
+++ b/client/src/components/CreateRecipe/CreateRecipe.css
@@ -305,25 +305,25 @@ input[type="range"]::-webkit-slider-thumb {
     margin-left: 10px;
     width: 350px; 
   }
-  #errorsimg{
+  /* #errorsimg{
     margin-right: 300px;
     margin-left: 10px;
     width: 350px; 
     border-color: red;
     border-style: solid;
-  }
+  } */
   #inputname{
     margin-right: 45px;
     width: 350px; 
     margin-left: 10px;
   }
-  #errorsname{
+  /* #errorsname{
     margin-right: 45px;
     width: 350px; 
     margin-left: 10px; 
     border-color: red;
     border-style: solid;
-  }
+  } */
   .lab{
     display: inline-flex;
     width: 700px;
@@ -335,10 +335,7 @@ input[type="range"]::-webkit-slider-thumb {
     width: 880px;
     margin-left: 950px;
   }
-  /* input.error{
-    border-color: red;
-    border-style: solid;
-  } */
+  
 
 
 }
