--- a/client/src/components/RecipeDetail/RecipeDetail.css
+++ b/client/src/components/RecipeDetail/RecipeDetail.css
@@ -143,7 +143,8 @@
         font-size: 15px;
         color:black;
         background:#b5c99a ;
-        height: fit-content;
+      
+        height:fit-content
        
        
         /* #6a994e */    
